--- a/template/iron-api/package.json
+++ b/template/iron-api/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "iron-api-template",
+  "name": "api-demo",
   "version": "1.0.0",
-  "description": "A base template for an awesome project",
-  "main": "src/index.js",
+  "description": "Simple API with documentation on Swagger",
+  "main": "api/app.js",
   "scripts": {
+    "start": "NODE_ENV=development DEBUG=app:* nodemon ./bin/www",
+    "start:prod": "NODE_ENV=production node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-swagger-generator": "^1.1.15",
+    "mongoose": "^5.6.9",
+    "morgan": "^1.9.1"
+  },
   "devDependencies": {
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.2.1"
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   }
 }
