--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@thebinaryfelix/create-iron-api",
   "version": "1.0.0",
-  "description": "A CLI to generate a base structure for an API REST project.",
+  "description": "A CLI to generate a base structure for a REST API project.",
   "main": "src/index.js",
   "bin": {
     "@thebinaryfelix/create-iron-api": "bin/create-iron-api",
