--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "repository": "github:thebinaryfelix/create-iron-api",
   "author": "Mateus Felix",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "arg": "^4.1.1",
     "chalk": "^2.4.2",
