--- a/package.json
+++ b/package.json
@@ -29,6 +29,16 @@
   "repository": "github:thebinaryfelix/create-iron-api",
   "author": "Mateus Felix",
   "license": "MIT",
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "arg": "^4.1.1",
     "chalk": "^2.4.2",
@@ -40,12 +50,15 @@
     "pkg-install": "^1.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.2.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.4",
     "prettier": "^1.18.2"
   }
 }
