--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "release": "standard-version",
+    "push": "git push --follow-tags origin master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
