--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "release": "standard-version",
     "push": "git push --follow-tags origin master",
+    "publish": "git push --follow-tags origin master && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
